--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
   <header>
-      <img src='' alt='headerImg' width='100%'>
+      <img src='assets/images/triviabanner.jpg' alt='headerImg' height=100%>
   </header>
   <div class='container'>
       <button class='btn btn-primary' id='startBtn'>Start</button>
@@ -22,8 +22,7 @@
       <div class='answerList'></div>
       <!-- Answer Page -->
       <div id=message></div>
-      <div id=correctedAnswer></div>
-      <div id=gif></div>
+	  <div id=correctedAnswer></div>
       <!-- Scoreboard -->
       <div id=finalMessage></div>
       <div id=correctAnswers></div>
@@ -74,7 +73,6 @@ var triviaQuestions = [{
 	answer: 2
 }];
 
-var gifArray = ['question1', 'question2', 'question3', 'question4', 'question5', 'question6', 'question7', 'question8', 'question9', 'question10'];
 var currentQuestion; var correctAnswer; var incorrectAnswer; var unanswered; var seconds; var time; var answered; var userSelect;
 var messages = {
 	correct: "Yes, that's right!",
@@ -108,23 +106,24 @@ function newGame(){
 function newQuestion(){
 	$('#message').empty();
 	$('#correctedAnswer').empty();
-	$('#gif').empty();
 	answered = true;
 	
 	//sets up new questions & answerList
 	$('#currentQuestion').html('Question #'+(currentQuestion+1)+'/'+triviaQuestions.length);
 	$('.question').html('<h2>' + triviaQuestions[currentQuestion].question + '</h2>');
-	for(var i = 0; i < 4; i++){
+  $('.answerList').empty();
+  for(var i = 0; i < 4; i++){
 		var choices = $('<div>');
 		choices.text(triviaQuestions[currentQuestion].answerList[i]);
-		choices.attr({'data-index': i });
+    	choices.attr({'data-index': i });
 		choices.addClass('thisChoice');
 		$('.answerList').append(choices);
 	}
 	countdown();
 	//clicking an answer will pause the time and setup answerPage
 	$('.thisChoice').on('click',function(){
-		userSelect = $(this).data('index');
+    userSelect = $(this).data('index');
+	console.log(userSelect);
 		clearInterval(time);
 		answerPage();
 	});
@@ -155,7 +154,6 @@ function answerPage(){
 
 	var rightAnswerText = triviaQuestions[currentQuestion].answerList[triviaQuestions[currentQuestion].answer];
 	var rightAnswerIndex = triviaQuestions[currentQuestion].answer;
-	$('#gif').html('<img src = "assets/images/'+ gifArray[currentQuestion] +'.gif" width = "400px">');
 	//checks to see correct, incorrect, or unanswered
 	if((userSelect == rightAnswerIndex) && (answered == true)){
 		correctAnswer++;
@@ -183,7 +181,6 @@ function scoreboard(){
 	$('#timeLeft').empty();
 	$('#message').empty();
 	$('#correctedAnswer').empty();
-	$('#gif').empty();
 
 	$('#finalMessage').html(messages.finished);
 	$('#correctAnswers').html("Correct Answers: " + correctAnswer);
